[package]
name = "xlsx2json"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to convert Excel files to JSON format with server/client data separation"

[dependencies]
# Excel 文件处理
calamine = "0.30"  # Excel 文件读取库
# JSON 处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
# 命令行参数处理
clap = { version = "4.5", features = ["derive"] }
# 错误处理
anyhow = "1.0"
thiserror = "2.0"
# 日志处理
#log = "0.4"
#env_logger = "0.11"
# 并行处理
rayon = "1.11"
# 文件系统操作
walkdir = "2.5"
# 时间处理
chrono = "0.4"
# 进度条
indicatif = "0.18"
# CPU 核心数检测
num_cpus = "1.17" 
